solved issue with responsive images on mobile

--- a/src/components/Results/index.css
+++ b/src/components/Results/index.css
@@ -13,6 +13,12 @@
   padding: 0em 2em;
 }
 
+@media screen and (max-width: 599px) {
+  .inner-container img {
+    max-width: 50%;
+  }
+}
+
 .container h1 {
   border-bottom: 2px solid black;
 }
